--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -172,4 +172,34 @@ body {
     background-color: #4682B4;
     transition: height 0.5s ease-in-out, background-color 0.5s ease-in-out;
 }
+/* Estilos para a seção de segurança (acordeão) */
+.accordion-item {
+    margin-bottom: 1rem;
+    border: 1px solid #e2e8f0;
+}
+.accordion-header {
+    padding: 1rem;
+    background-color: #f7fafc;
+    border-bottom: 1px solid #e2e8f0;
+    transition: background-color 0.3s ease-in-out;
+}
+.accordion-header:hover {
+    background-color: #edf2f7;
+}
+.accordion-header i {
+    transition: transform 0.3s ease-in-out;
+}
+.accordion-header.active i {
+    transform: rotate(180deg);
+}
+.accordion-content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out;
+    padding: 0 1rem; /* Adjust padding to 0 when collapsed */
+}
+.accordion-content.open {
+    max-height: 500px; /* Adjust as needed, should be larger than content */
+    padding: 1rem; /* Apply padding when open */
+}
 
